// $Id: CHANGELOG.txt,v 1.202 2010/09/25 11:53:19 twod Exp $

Wysiwyg x.x-x.x, xxxx-xx-xx
---------------------------


Wysiwyg 7.x-3.x, xxxx-xx-xx
---------------------------
#739558 by sun, TwoD: Updated for new #type text_format.
#612954 by TwoD: Fixed broken editor settings.
#585932 by sun: Ported to Drupal 7.


Wysiwyg 6.x-3.x, xxxx-xx-xx
---------------------------
#651490 by TwoD: Fixed Whizzywig width.
#715228 by TwoD: Fixed TinyMCE image popups not launching for existing images.
#606952 by TwoD: Fixed inserting content in fullscreen TinyMCE.
#593008 by TwoD: Fixed third-party scripts breaking Wysiwyg.
#695398 by RichieB, Cl1mh4224rd, mcpuddin: Fixed TinyMCE 3.3.9.1 detection.
#737318 by dboune: Fixed CKEditor default skin depends on filesystem order.
#775608 by TwoD: Fixed FCKEditor crashes IE on save.
#824710 by TwoD: CKEditor not disabled upon enabling.
#752516 by nquocbao, sun: Fixed openwysiwyg version callback.
#753536 by TwoD: Fixed version detection for Whizzywig.
#752516 by nquocbao, sun: Fixed file stream warnings in version callbacks.
#628110 by quicksketch, sun, markus_petrux: Added editor settings alter hook.
#689218 by wwalc, TwoD, sun: Improved support for CKEditor.
#695398 by TwoD: Updated support for TinyMCE 3.3.
#696040 by Dave Reid: Fixed missing Cancel link on profile form.
#594322 by TwoD: Added insert method for NicEdit.
#659200 by TwoD: Fixed YUI Editor content lost in IE.
#594928 by ericbellot, TwoD, sun: Fixed 'attribs' button missing in TinyMCE.
#557090 by TwoD: Fixed Whizzywig 56 instance not removed on detach().
#667848 by TwoD, kaakuu: Fixed FCKeditor is not properly detached in IE.
#695768 by sun: Fixed #resizable removed when no editor profiles are loaded.
#631494 by TwoD: Fixed multi-site libraries directory failure for WYMeditor.
#660080 by TwoD: Fixed Notice: Undefined offset.
#613922 by TwoD, sun: Fixed PHP warning when saving profiles.
#582298 by dereine: Added auto-paste from Word detection for FCKeditor.