@@ -1,4 +1,4 @@
-// $Id: tinymce-3.js,v 1.21 2010/09/25 03:00:16 twod Exp $
+// $Id: tinymce-3.js,v 1.22 2010/10/17 20:52:40 twod Exp $
 (function($) {
 
 /**
@@ -61,9 +61,15 @@ Drupal.wysiwyg.editor.attach.tinymce = function(context, params, settings) {
     $('#' + ed.editorContainer + ' table.mceToolbar').remove();
   });
 
-  // #715228: Remove extra mceItem class added by Wysiwyg < v2.1.
+  // Remove TinyMCE's internal mceItem class, which was incorrectly added to
+  // submitted content by Wysiwyg <2.1. TinyMCE only temporarily adds the class
+  // for placeholder elements. If preemptively set, the class prevents (native)
+  // editor plugins from gaining an active state, so we have to manually remove
+  // it prior to attaching the editor. This is done on the client-side instead
+  // of the server-side, as Wysiwyg has no way to figure out where content is
+  // stored, and the class only affects editing.
   $field = $('#' + params.field);
-  $field.val($field.val().replace(/class=(['"].*?)\bmceItem\b(.*?['"])/ig, 'class=$1$2'));
+  $field.val($field.val().replace(/(<.+?\s+class=['"][\w\s]*?)\bmceItem\b([\w\s]*?['"].*?>)/ig, '$1$2'));
 
   // Attach editor.
   ed.render();
