@@ -1,5 +1,5 @@
 <?php
-// $Id: markitup.inc,v 1.9 2010/04/02 14:05:36 sun Exp $
+// $Id: markitup.inc,v 1.10 2010/10/17 21:06:19 twod Exp $
 
 /**
  * @file
@@ -14,15 +14,15 @@ function wysiwyg_markitup_editor() {
     'title' => 'markItUp',
     'vendor url' => 'http://markitup.jaysalvat.com',
     'download url' => 'http://markitup.jaysalvat.com/downloads',
-    'library path' => wysiwyg_get_path('markitup') . '/markitup',
+    'library path' => wysiwyg_get_path('markitup'),
     'libraries' => array(
       '' => array(
         'title' => 'Source',
-        'files' => array('jquery.markitup.js'),
+        'files' => array('markitup/jquery.markitup.js'),
       ),
       'pack' => array(
         'title' => 'Packed',
-        'files' => array('jquery.markitup.pack.js'),
+        'files' => array('markitup/jquery.markitup.pack.js'),
       ),
     ),
     'version callback' => 'wysiwyg_markitup_version',
@@ -48,9 +48,14 @@ function wysiwyg_markitup_editor() {
  *   The installed editor version.
  */
 function wysiwyg_markitup_version($editor) {
-  $changelog = $editor['library path'] . '/readme.txt';
+  // Changelog was in markitup/markitup/readme.txt <= 1.1.5.
+  $changelog = $editor['library path'] . '/markitup/readme.txt';
   if (!file_exists($changelog)) {
-    return;
+    // Changelog was moved up to markitup/CHANGELOG.md after 1.1.5.
+    $changelog = $editor['library path'] . '/CHANGELOG.md';
+    if (!file_exists($changelog)) {
+      return;
+    }
   }
   $changelog = fopen($changelog, 'r');
   $line = fgets($changelog);
@@ -94,10 +99,10 @@ function wysiwyg_markitup_themes($editor, $profile) {
 function wysiwyg_markitup_settings($editor, $config, $theme) {
   // Whoever is guilty for adding this horrible CSS-file-without-filepath
   // override "feature" to Drupal core... stand in the corner!
-  drupal_add_css($editor['library path'] . '/skins/' . $theme . '/style.css', 'theme');
+  drupal_add_css($editor['library path'] . '/markitup/skins/' . $theme . '/style.css', 'theme');
 
   $settings = array(
-    'root' => base_path() . $editor['library path'] . '/',
+    'root' => base_path() . $editor['library path'] . '/markitup/',
     'nameSpace' => $theme,
     'markupSet' => array(),
   );
