@@ -1,5 +1,5 @@
 <?php
-// $Id: wysiwyg.install,v 1.7 2010/09/10 00:39:16 sun Exp $
+// $Id: wysiwyg.install,v 1.9 2010/10/24 22:07:09 sun Exp $
 
 /**
  * Implementation of hook_schema().
@@ -8,7 +8,7 @@ function wysiwyg_schema() {
   $schema['wysiwyg'] = array(
     'description' => t('Stores Wysiwyg profiles.'),
     'fields' => array(
-      'format' => array('type' => 'int', 'not null' => TRUE, 'default' => 0),
+      'format' => array('type' => 'varchar', 'length' => 255, 'not null' => TRUE),
       'editor' => array('type' => 'varchar', 'length' => 128, 'not null' => TRUE, 'default' => ''),
       'settings' => array('type' => 'text', 'size' => 'normal'),
     ),
@@ -47,6 +47,19 @@ function wysiwyg_enable() {
     'xstandard',
     'yui_editor',
   ));
+}
+
+/**
+ * Implements hook_update_dependencies().
+ */
+function wysiwyg_update_dependencies() {
+  // Ensure that format columns are only changed after Filter module has changed
+  // the primary records.
+  $dependencies['wysiwyg'][7000] = array(
+    'filter' => 7010,
+  );
+
+  return $dependencies;
 }
 
 /**
@@ -163,3 +176,15 @@ function wysiwyg_update_6200() {
   return $ret;
 }
 
+/**
+ * Change {wysiwyg}.format into a string.
+ */
+function wysiwyg_update_7000() {
+  db_drop_primary_key('wysiwyg');
+  db_change_field('wysiwyg', 'format', 'format', array(
+    'type' => 'varchar',
+    'length' => 255,
+    'not null' => TRUE,
+  ));
+  db_add_primary_key('wysiwyg', array('format'));
+}
